# AMR_MtT

./: README.md
amrmtt_robot/: CMakeLists.txt  package.xml
amrmtt_robot/config/: joint_names_TEST_URDF_OCT8_001.yaml
amrmtt_robot/description/: robot.urdf.xacro  robot_core.xacro
amrmtt_robot/gazebo_gz_ros/: world.sdf
amrmtt_robot/launch/: display.launch.py  launch_sim.launch.py  rsp.launch.py  spawn_robot.launch.py
amrmtt_robot/meshes/: L_B_Caster_W_Link.STL  L_F_Caster_W_link.STL  Left_Wheel_Link.STL  R_B_Caster_W_Link.STL  R_F_Caster_W_link.STL  Right_Wheel_Link.STL
amrmtt_robot/rviz/: display(1).rviz  display.rviz  views_robot.rviz
amrmtt_robot/urdf/: TEST_URDF_OCT8_001 copy.urdf  TEST_URDF_OCT8_001.csv  TEST_URDF_OCT8_001.urdf  urdf_success(0).urdf
